[metadata]
name = vcactivity
version = 1.0.0
description = A python module to access and utilize Beta Discord VC Party features like YouTube, Poker Night, etc. with your Bot
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = AkshuAgarwal
author_email = akshitagarwal2204@gmail.com
url = https://github.com/AkshuAgarwal/VCActivity
project_urls =
    Issue Tracker = https://github.com/AkshuAgarwal/VCActivity/issues
    Source Code = https://github.com/AkshuAgarwal/VCActivity
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
license_files =
    LICENSE

[options]
packages = vcactivity
python_requires = >=3.8.1
include_package_data = True
install_requires =
    discord.py >= 1.5.0